<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewCarActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextColor="#F80B0B">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_detalls_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/resume"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/detalls_et_model_hint"
                    android:layoutDirection="ltr"
                    android:textColor="@color/accent"
                    android:tooltipText="Name" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextColor="#F80B0B">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_detalls_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_color"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/detalls_et_color_hint"
                    android:layoutDirection="ltr"
                    android:textColor="@color/accent"
                    android:tooltipText="Name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextColor="#F80B0B">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_detalls_dpl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_local_gas_station"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/detalls_et_dbl_hint"
                    android:layoutDirection="ltr"
                    android:textColor="@color/accent"
                    android:tooltipText="Name" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextColor="#F80B0B">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_detalls_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_description"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/detalls_et_description_hint"
                    android:layoutDirection="ltr"
                    android:textColor="@color/accent"
                    android:tooltipText="Name" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="@color/colorSecondary1"
            app:expandedTitleMarginEnd="@dimen/_10sdp"
            app:expandedTitleMarginStart="@dimen/_26sdp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/details_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/accent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/car"
                app:layout_anchor="@+id/appBarLayout"
                app:layout_anchorGravity="center"
                app:layout_collapseParallaxMultiplier="0.5" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/details_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>